# marp-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  testing.py
data/: build.md  my_presentation.md
marp_utils/: _bootstrap.py  _bootstrapper.py  _code.py  _exceptions.py  _processor.py  _tags.py  _theme.py  bootstrap.py  main.py
tests/: test_meta.py
themes/: base.css
