[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "marp_utils"
version = "0.1"
authors = [
    {name = "Maxime Filippini", email = "maxime.filippini@gmail.com"},
]
description = "Utilities for Marp-built presentations"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = []
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["marp_utils"]

[project.scripts]
marputils = "marp_utils.main:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
